--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ function getDeviceId(){
 
 /* ===== KEY DB ===== */
 const KEYS={
-  "nhovip":{expire:"2030-12-31",device:null},
+  "nhovip":{expire:"2026-02-05",device:null},
   "tienbip":{expire:"2036-02-01",device:null},
-  "vip2":{expire:"2026-02-01",device:null}
+  "Corteva2026@":{expire:"2026-02-07",device:null}
 };
 
 /* ===== CHECK KEY ===== */
@@ -186,4 +186,5 @@ window.onload=()=>{
 </script>
 
 </body>
+
 </html>
