--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ function getDeviceId(){
 
 /* ===== KEY DB ===== */
 const KEYS={
-  "nhovip":{expire:"2026-02-08",device:null},
+  "abc9@":{expire:"2026-02-08",device:null},
   "tienbip":{expire:"2036-02-01",device:null},
   "Corteva2026@":{expire:"2026-02-07",device:null}
 };
@@ -188,5 +188,6 @@ window.onload=()=>{
 </body>
 
 </html>
+
 
 
